# matrix

./: .coverage  .flake8  .gitignore  Cargo.toml  Makefile  README.md  classes.py  functions.py  matrix.py  prime_field.py  projection_matrix.py  test_functions.py  test_matrix.py  test_prime_field.py  test_utils.py  test_vector.py  utils.py  vector.py
src/: Matrix.py  Vector.py  __init__.py  _matrix.py  _prime_field.py  _vector.py  field.rs  functions.py  is_close.rs  lib.rs  main.rs  matrix.py  matrix.rs  prime_field.py  utils.py  vector.py  vector.rs
test/: conftest.py  test_dot_product.py  test_functions.py  test_matrix.py  test_prime_field.py  test_utils.py  test_vector.py
