[package]
name = "matrix"
version = "0.1.0"
edition = "2024"

[dependencies]

[lints.clippy]
# warn or deny all lints by default
cargo = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "deny", priority = -1 }
restriction = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "deny", priority = -1 }

# deactivate useless lints
allow_attributes_without_reason = "allow"
approx_constant = "allow"
arbitrary_source_item_ordering = "allow"
arithmetic_side_effects = "allow"
blanket_clippy_restriction_lints = "allow"
cargo_common_metadata = "allow"
cast_lossless = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
default_numeric_fallback = "allow"
else_if_without_else = "allow"
implicit_return = "allow"
indexing_slicing = "allow"
min_ident_chars = "allow"
missing_docs_in_private_items = "allow"
multiple_crate_versions = "allow"
pattern_type_mismatch = "allow"
redundant_test_prefix = "allow"
should_panic_without_expect = "allow"
single_call_fn = "allow"
undocumented_unsafe_blocks = "allow"
